F&GDEV/src/objects/Document_Approval_Subproject__c.object
<CustomObject>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>EmailNotifTest__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>EmailNotifTest</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Document_Approvals_Subproject</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Email_Notification__c</fullName>
        <label>Email Notification</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Submitted</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
                <value>
                    <fullName>Recalled</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Subproject__c</fullName>
        <label>Subproject</label>
        <referenceTo>Subproject__c</referenceTo>
        <relationshipName>Document_Approvals</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Business Requirements</fullName>
                </value>
                <value>
                    <fullName>Work Order</fullName>
                </value>
                <value>
                    <fullName>Test Plan</fullName>
                </value>
                <value>
                    <fullName>Test Results</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Document Approval Subproject</label>
    <nameField>
        <displayFormat>DASP-{00000}</displayFormat>
        <label>Document Approval Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Document Approvals Subproject</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>